--- a/src/template.html
+++ b/src/template.html
@@ -77,23 +77,21 @@
           </div>
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
-              <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+              <p class="about-wrapper__info-text">I am currently the pursuing B.E in Information Technology at Universal college of Engineering. I make sure to keep my porfolio as up-to-date and complete as I can with job descriptions, volunteer experiences, groups, endorsements, etc.
               </p>
-              <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
-              </p>
-              <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+              <p class="about-wrapper__info-text"></p>
+              <!-- <span class="d-flex mt-3">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/pranavresume.jpg">
                   View Resume
                 </a>
-              </span>
+              </span> -->
+              <!-- <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/pranavresume.jpg" />
+                  </div>
+                </a>
+              </div> -->
             </div>
           </div>
         </div>
@@ -116,17 +114,14 @@
                 <h3 class="project-wrapper__text-title">Background-Generator</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A fun time pass site to chose among different gradient background, which one will be suitable for you project or site
+                    And get the hash code and rgba code for the same.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://pranavupadhyay99.github.io/background_selector.github.io/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/pranavupadhyay99/background_selector.github.io">
                   Source Code
                 </a>
               </div>
@@ -135,7 +130,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/banner.png" />
                   </div>
                 </a>
               </div>
@@ -144,7 +139,7 @@
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <div class="row">
+          <!-- <!-- <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Project Title</h3>
@@ -178,7 +173,7 @@
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Project Title</h3>
@@ -210,9 +205,9 @@
             </div>
           </div>
           <!-- /END Project -->
-        </div>
+<!--         </div>
       </div>
-    </section>
+    </section> --> 
     <!-- /END Projects Section -->
 
     <!-- **** Contact Section **** -->
@@ -223,12 +218,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+              Mobile : 7021583015
+              E-mail : pranavu29@gmail.com
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="mailto:pranavu29@gmail.com"
             >Call to Action</a
           >
         </div>
@@ -243,16 +239,16 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
+          <!-- <a href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          </a> -->
+          <!-- <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          </a> -->
+          <a href="https://www.linkedin.com/in/pranav-upadhyay-085994157/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/pranavupadhyay99" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -266,7 +262,7 @@
         </p>
 
         <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
+        <!-- <p class="mt-3 pt-3">
           <a
             class="github-button"
             href="https://github.com/cobidev/simplefolio/fork"
@@ -285,7 +281,7 @@
             aria-label="Star cobidev/simplefolio on GitHub"
             >Star</a
           >
-        </p>
+        </p> -->
       </div>
     </footer>
     <!-- /END Footer Section -->
