--- a/src/template.html
+++ b/src/template.html
@@ -256,11 +256,11 @@
         <hr />
 
         <!-- If you give me some credit, will be huge for me :) -->
-        <p class="footer__text">
+        <!-- <p class="footer__text">
           © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
           </a>
         </p>
-
+ -->
         <!-- Remove this paragraph once you setup your custom portfolio -->
         <!-- <p class="mt-3 pt-3">
           <a
